# django-datastar-examples

./: .env_sample  .gitignore  .pre-commit-config.yaml  README.md  build.sh  pyproject.toml  render.yaml
config/: settings.py  urls.py
docs/datastar-guide/: best-practices.md  common-patterns.md  core-concepts.md  datastar-actions-reference.md  datastar-attributes-reference.md  django-forms-integration.md  django-integration.md  error-handling.md  index.md  installation.md  python-sdk-api.md  table-of-contents.md  troubleshooting.md  version-compatibility.md
examples/: admin.py  baker_recipes.py  context_processors.py  decorators.py  forms.py  howto_config.py  models.py  search.py  urls.py  utils.py  views.py
examples/management/commands/: rebuild_search_index.py  seed_data.py
examples/migrations/: 0001_initial.py  0002_alter_notification_options_alter_todo_options_and_more.py  0003_rename_active_contact_is_active.py  0004_remove_todo_completed_todo_is_completed.py  0005_question_answer.py  0006_answer_is_correct.py  0007_alter_answer_options.py
examples/services/: __init__.py  search_service.py
examples/templates/examples/: active_search.html  bulk_update.html  click_to_load.html  delete_row.html  edit_row.html  file_processing.html  file_upload.html  index.html  infinite_scroll.html  inline_validation.html  lazy_tabs.html  notifications.html  quiz_index.html  search.html  sortable.html  system_messages.html  todomvc.html
examples/templates/examples/fragments/: alert.html  contact_form.html  contact_list.html  contact_list_append.html  contact_row.html  contact_table.html  example_sidebar.html  file_processing_results.html  howto_content.html  howto_panel.html  howto_steps.html  learn_more.html  notification_alert.html  notification_list.html  quiz_feedback.html  quiz_question_card.html  quiz_report.html  search_results.html  tab_content.html  todo_item.html  todo_list.html  upload_result.html  validation_error.html
examples/templatetags/: __init__.py  howto_tags.py
examples/tests/: test_categories.py  test_code_tabs.py  test_context_processors.py  test_copy_code.py  test_decorators.py  test_doc_links.py  test_examples_verification.py  test_forms.py  test_howto_config.py  test_models.py  test_quiz.py  test_recent_searches.py  test_recipes.py  test_search.py  test_search_keyboard_navigation.py  test_seed_data.py  test_split_view.py  test_utils.py
static/css/: custom.css
static/js/: code-blocks.js  code-tabs.js  header.js  sidebar.js  split-view.js
templates/: base.html  examples_base.html
templates/includes/: breadcrumbs.html  code_block.html  code_tabs.html  nav_links.html  sidebar.html  split_view.html
