[project]
name = "django-datastar-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datastar-py>=0.8.0",
    "django>=6.0.2",
    "model-bakery>=1.23.0",
    "python-decouple>=3.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["examples/tests"]

[tool.ruff]
exclude = ["docs", "migrations"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "djade>=1.7.0",
    "django-browser-reload>=1.21.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
]
