[project]
name = "django-datastar-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datastar-py>=0.8.0",
    "django>=6.0.2",
    "model-bakery>=1.23.0",
    "python-decouple>=3.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["examples/tests"]

[tool.ruff]
exclude = ["docs", "migrations"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "djlint>=1.36.4",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-playwright>=0.7.2",
]


[tool.djlint]
profile="django"
indent=2
format_css=true
preserve_blank_lines=true
use_gitignore=true
ignore="T002,H030,H031"
max_blank_lines=2
max_line_length=80
format_js=true

[tool.djlint.js]
indent_size=2
